[project]
name = "steamlitapp-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.1.1",
    "plotly>=6.24.1",
    "pycaret>=3.0.2",
    "streamlit>=2.24.0",
    "scikit-learn>=1.3.2"
]
